// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshots 1`] = `
.c0.start {
  margin-right: 8px;
}

.c0.end {
  margin-left: 8px;
}

<span
  class="c0 ButtonAdornment"
/>
`;

exports[`should match snapshots 2`] = `
.c0.start {
  margin-right: 8px;
}

.c0.end {
  margin-left: 8px;
}

<span
  class="c0 ButtonAdornment"
>
  A
</span>
`;
